objects/Contract_Line__c/Contract_Line__c.object-meta.xml
<CustomObject>
    <label>Contract Line</label>
    <nameField>
        <label>contract line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>