objects/Contract_Line__c/fields/Blocked_Resource_Type_Resource__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Resource_Type_Resource__c</fullName>
    <formula>IF(Resource_Type__c != NULL, Resource_Type__r.Blocked__c, IF(Resource__c != NULL, Resource__r.Blocked__c, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blocked Resource Type/Resource</label>
    <type>Checkbox</type>
</CustomField>