objects/Contract_Line__c/fields/CSID__c.field-meta.xml
<CustomField>
    <fullName>CSID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSID</label>
    <type>Text</type>
</CustomField>