objects/Contract_Line__c/fields/Customer_Overtime_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Overtime_Description__c</fullName>
    <label>Customer Overtime Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>