objects/Contract_Line__c/fields/Customer_Overtime_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Overtime_Item_No__c</fullName>
    <label>Customer Overtime Item No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>