objects/Contract_Line__c/fields/Customer_Premium_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Premium_Description__c</fullName>
    <label>Customer Double Time Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>