objects/Contract_Line__c/fields/Min_Sell_Qty_Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Min_Sell_Qty_Container_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Min Sell Qty. Container Size</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Contract Lines (Min Sell Qty. Container Size)</relationshipLabel>
    <relationshipName>Contract_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>