objects/Contract_Line__c/fields/Resource_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Resource_Blocked__c</fullName>
    <formula>Resource__r.Blocked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResourceBlocked</label>
    <type>Checkbox</type>
</CustomField>