objects/Contract_Line__c/fields/Resource_Category__c.field-meta.xml
<CustomField>
    <fullName>Resource_Category__c</fullName>
    <formula>TEXT(Resource__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Category</label>
    <type>Text</type>
</CustomField>