objects/Contract_Line__c/fields/Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_ID__c</fullName>
    <formula>Resource__r.CSID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource ID</label>
    <type>Text</type>
</CustomField>