objects/Contract_Line__c/fields/Resource_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type_Category__c</fullName>
    <formula>TEXT(Resource_Type__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Type Category</label>
    <type>Text</type>
</CustomField>