objects/Contract_Line__c/fields/Resource_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type_ID__c</fullName>
    <formula>Resource_Type__r.Formual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Type ID</label>
    <type>Text</type>
</CustomField>