objects/Contract_Line__c/fields/ResourceTypeBlocked__c.field-meta.xml
<CustomField>
    <fullName>ResourceTypeBlocked__c</fullName>
    <formula>Resource_Type__r.Blocked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResourceTypeBlocked</label>
    <type>Checkbox</type>
</CustomField>