objects/Contract_Line__c/fields/T_M_Description__c.field-meta.xml
<CustomField>
    <fullName>T_M_Description__c</fullName>
    <label>T&amp;M Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>