objects/Contract_Line__c/fields/test_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>test_Unit_of_Measure__c</fullName>
    <formula>Unit_of_Measure__c =  Resource_Type__r.Unit_of_Measure__c

 || 

Unit_of_Measure__c =   Resource_Type__r.Unit_of_Measure1__c

 || 

Unit_of_Measure__c =    Resource_Type__r.Unit_of_Measure2__c 

 || 


Unit_of_Measure__c =    Resource_Type__r.Unit_of_Measure3__c 

 || 

Unit_of_Measure__c =    Resource_Type__r.Unit_of_Measure4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test Unit of Measure RT</label>
    <type>Checkbox</type>
</CustomField>