objects/Contract_Line__c/fields/Test_UOM_Resourcw__c.field-meta.xml
<CustomField>
    <fullName>Test_UOM_Resourcw__c</fullName>
    <formula>Unit_of_Measure__c =   Resource__r.Unit_of_Measure__c 

 || 

Unit_of_Measure__c =   Resource__r.Unit_of_Measure1__c 

 || 

Unit_of_Measure__c =    Resource__r.Unit_of_Measure2__c 

 || 


Unit_of_Measure__c =   Resource__r.Unit_of_Measure3__c  

 || 
Unit_of_Measure__c =  Resource__r.Unit_of_Measure4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test UOM Resourcw</label>
    <type>Checkbox</type>
</CustomField>