objects/Contract_Line__c/fields/Unit_Price_Per_UOM__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Per_UOM__c</fullName>
    <formula>'$' &amp; TEXT(FLOOR(Regular_Rate__c)) + "." + RIGHT(TEXT((1 + Regular_Rate__c - FLOOR(Regular_Rate__c)) * 100 ), 2) &amp; '/' &amp; Unit_of_Measure__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price Per UOM</label>
    <type>Text</type>
</CustomField>